name:                reddit-filter
version:             0.1.0.0
synopsis:            An interesting way to browse Reddit
description:
  An interesting way to browse Reddit
homepage:            http://github.com/neongreen/reddit-filter
bug-reports:         http://github.com/neongreen/reddit-filter/issues
license:             BSD3
license-file:        LICENSE
author:              Artyom
maintainer:          yom@artyom.me
-- copyright:           
category:            Application
tested-with:         GHC == 7.10.3
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/neongreen/reddit-filter.git

executable reddit-filter
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
  ghc-options:         -Wall -fno-warn-unused-do-bind
  hs-source-dirs:      src
  default-language:    Haskell2010
